--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-echo node_modules/>>.gitignore
-echo dist/>>.gitignore
-echo .DS_Store>>.gitignore
-echo .env>>.gitignore
 node_modules
+dist
+.DS_Store
+.env
